# energy-daemon-reader

./: .clangd  .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
client/: CMakeLists.txt
client/source/: client.cpp  client.hpp  main.cpp
daemon/: CMakeLists.txt
daemon/source/: main.cpp
include/erd/: erd.h  erd.hpp  erd_common.hpp  erd_nop.hpp  erd_powercap.hpp  units.hpp
include/erd/ipc/: message.hpp
python_bindings/: setup.py
python_bindings/erd/: erd.py
source/: erd.cpp  erd_bindings.cpp  erd_common.cpp  erd_nop.cpp  erd_powercap.cpp  message.cpp
test/: CMakeLists.txt
